fixed overflow and styling errors

--- a/src/screen1/screen1.css
+++ b/src/screen1/screen1.css
@@ -10,13 +10,13 @@
     width: 40vw;
     height: 100vh;
     justify-self: center;
-    background-color: rgb(201, 252, 232);
+    background-color: rgb(175, 254, 222);
 }
 
 .home-right-screen1{
     width: 50vw;
     height: 100vh;
-    background-color: rgb(201, 252, 232);
+    background-color: rgb(175, 254, 222);
     display: grid;
 }
 
@@ -25,7 +25,7 @@
     align-self: center;
     display: grid;
     grid-template-rows: 1fr 3fr 1fr;
-    background-color: rgb(201, 252, 232);
+    background-color: rgb(175, 254, 222);
     width: 50vw;
     height: 100vh
 }
@@ -124,7 +124,7 @@
         align-self: center;
         display: grid;
         grid-template-rows: 1fr 3fr 1fr;
-        background-color: rgb(189, 238, 219);
+        background-color: rgb(175, 254, 222);
         width: 100vw;
         height: 100vh
     }
@@ -171,7 +171,7 @@
         align-self: center;
         display: grid;
         grid-template-rows: 1fr 3fr 1fr;
-        background-color: rgb(189, 238, 219);
+        background-color: rgb(175, 254, 222);
         width: 100vw;
         height: 100vh
     }
