--- a/src/screen3/screen3.css
+++ b/src/screen3/screen3.css
@@ -1,7 +1,7 @@
 .screen3-container{
     height: 100vh;
     width: 100vw;
-    background-color: rgb(201, 252, 232);
+    background-color: rgb(175, 254, 222);
     overflow: auto;
     border-bottom: 5px solid black;
     display: grid;
