--- a/src/screen4/screen4.css
+++ b/src/screen4/screen4.css
@@ -21,10 +21,12 @@
 
 .contact-us{
     font-size: 3rem;
+    font-family: "Baloo 2", cursive;
 }
 
 .details{
     font-size: 2rem;
+    font-family: "Baloo 2", cursive;
 }
 
 .screen4-right-container{
