--- a/src/screen5/screen5.css
+++ b/src/screen5/screen5.css
@@ -1,10 +1,11 @@
 .screen5-container{
     width: 100vw;
     height: 100vh;
-    background-color: rgb(201, 252, 232);
+    background-color: rgb(175, 254, 222);
     border-top: 5px solid black;
     display: grid;
     justify-items: center;
+    grid-template-rows: 1fr 1fr 1fr;
 }
 
 .meeting-grid{
@@ -19,13 +20,14 @@
 
 .meeting-grid p{
     font-size: 2rem;
+    font-size: "Baloo 2", cursive;;
 }
 
 .meeting-location{
     display: grid;
     align-items: center;
     justify-items: center;
-
+    font-family: "Baloo 2", cursive;
     font-size: 3rem;
 }
 
